[package]
name = "ts_tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ark-ff = { version = "0.4.0", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false, features = [
    "curve",
] }

num-bigint = { version = "0.4", features = ["rand"] }

[dependencies.num-traits]
version = "0.2"
default-features = false
